// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manager name to be retrieved from JSON object renders to match shapshot with manager name from json object 1`] = `
<div
  className="prepipForm"
  id="prepipForm"
>
  <table
    className="feedbackTable"
  >
    <tr>
      <td>
        <div
          className="prepipBanner1"
        >
          <LogoSection />
        </div>
      </td>
      <td
        colSpan="6"
      >
        <div
          className="prepipBanner"
        >
          Documented Feedback
        </div>
      </td>
    </tr>
  </table>
  <p
    className="prepipHtml"
  >
    Dear 
    <b>
      Sinmiloluwa Oloyede
      ,
    </b>
  </p>
  <p
    className="prepipHtml"
  >
    The purpose of this email is to notify you that your performance has been and is currently not at a satisfactory level. As such, you are required to level up on the following skills/areas within the coming weeks:
  </p>
  <table
    className="tableRing"
  >
    <tr>
      <td>
        <table
          className="prepipTable"
        >
          <thead
            className="tableHeader"
          >
            <tr>
              <th>
                S/N
              </th>
              <th>
                Performance Issue Area(s) (Dev Pulse Attribute/LMSOutput)
              </th>
              <th>
                Rolling Average
              </th>
              <th>
                Context
              </th>
              <th>
                Areas of Improvement
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="dashboard-table__row"
            >
              <td>
                <b>
                  0
                </b>
              </td>
              <td>
                <b
                  className="text-capitalize"
                >
                  lms
                </b>
              </td>
              <td>
                <b />
              </td>
              <td>
                <b>
                  Hi Sinmiloluwa
                </b>
              </td>
              <td>
                <b />
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </table>
  <p
    className="prepipHtml"
  >
    Please note that this is the
     
    0th 
    feedback you have received since the performance issue was observed. In
    order to meet the Program advancement standard of &gt;=1 on all DevPulse attributes, you may need to exceed expectation in these areas within the coming weeks.
  </p>
  <p
    className="prepipHtml"
  >
    We encourage you to reach out to your TTL who is available to give you feedback and guidance. You can also seek help from your colleagues or cohort rep or any member of the fellow’s council or leadership team as needed as you strive to improve on these issue areas.
  </p>
  <p
    className="prepipHtml"
  >
    TIA, 
  </p>
  <p>
    <b>
      Olaolu Akinsete, Manager
    </b>
  </p>
</div>
`;

exports[`Manager name will be null renders to match shapshot with no manager name 1`] = `
<div
  className="prepipForm"
  id="prepipForm"
>
  <table
    className="feedbackTable"
  >
    <tr>
      <td>
        <div
          className="prepipBanner1"
        >
          <LogoSection />
        </div>
      </td>
      <td
        colSpan="6"
      >
        <div
          className="prepipBanner"
        >
          Documented Feedback
        </div>
      </td>
    </tr>
  </table>
  <p
    className="prepipHtml"
  >
    Dear 
    <b>
      Sinmiloluwa Oloyede
      ,
    </b>
  </p>
  <p
    className="prepipHtml"
  >
    The purpose of this email is to notify you that your performance has been and is currently not at a satisfactory level. As such, you are required to level up on the following skills/areas within the coming weeks:
  </p>
  <table
    className="tableRing"
  >
    <tr>
      <td>
        <table
          className="prepipTable"
        >
          <thead
            className="tableHeader"
          >
            <tr>
              <th>
                S/N
              </th>
              <th>
                Performance Issue Area(s) (Dev Pulse Attribute/LMSOutput)
              </th>
              <th>
                Rolling Average
              </th>
              <th>
                Context
              </th>
              <th>
                Areas of Improvement
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="dashboard-table__row"
            >
              <td>
                <b>
                  0
                </b>
              </td>
              <td>
                <b
                  className="text-capitalize"
                >
                  lms
                </b>
              </td>
              <td>
                <b />
              </td>
              <td>
                <b>
                  Hi Sinmiloluwa
                </b>
              </td>
              <td>
                <b />
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </table>
  <p
    className="prepipHtml"
  >
    Please note that this is the
     
    0th 
    feedback you have received since the performance issue was observed. In
    order to meet the Program advancement standard of &gt;=1 on all DevPulse attributes, you may need to exceed expectation in these areas within the coming weeks.
  </p>
  <p
    className="prepipHtml"
  >
    We encourage you to reach out to your TTL who is available to give you feedback and guidance. You can also seek help from your colleagues or cohort rep or any member of the fellow’s council or leadership team as needed as you strive to improve on these issue areas.
  </p>
  <p
    className="prepipHtml"
  >
    TIA, 
  </p>
  <p>
    <b />
  </p>
</div>
`;

exports[`Pre pip notification form renders to match shapshot with manager name from stringified object 1`] = `
<div
  className="prepipForm"
  id="prepipForm"
>
  <table
    className="feedbackTable"
  >
    <tr>
      <td>
        <div
          className="prepipBanner1"
        >
          <LogoSection />
        </div>
      </td>
      <td
        colSpan="6"
      >
        <div
          className="prepipBanner"
        >
          Documented Feedback
        </div>
      </td>
    </tr>
  </table>
  <p
    className="prepipHtml"
  >
    Dear 
    <b>
      Sinmiloluwa Oloyede
      ,
    </b>
  </p>
  <p
    className="prepipHtml"
  >
    The purpose of this email is to notify you that your performance has been and is currently not at a satisfactory level. As such, you are required to level up on the following skills/areas within the coming weeks:
  </p>
  <table
    className="tableRing"
  >
    <tr>
      <td>
        <table
          className="prepipTable"
        >
          <thead
            className="tableHeader"
          >
            <tr>
              <th>
                S/N
              </th>
              <th>
                Performance Issue Area(s) (Dev Pulse Attribute/LMSOutput)
              </th>
              <th>
                Rolling Average
              </th>
              <th>
                Context
              </th>
              <th>
                Areas of Improvement
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="dashboard-table__row"
            >
              <td>
                <b>
                  0
                </b>
              </td>
              <td>
                <b
                  className="text-capitalize"
                >
                  lms
                </b>
              </td>
              <td>
                <b />
              </td>
              <td>
                <b>
                  Hi Sinmiloluwa
                </b>
              </td>
              <td>
                <b />
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </table>
  <p
    className="prepipHtml"
  >
    Please note that this is the
     
    0th 
    feedback you have received since the performance issue was observed. In
    order to meet the Program advancement standard of &gt;=1 on all DevPulse attributes, you may need to exceed expectation in these areas within the coming weeks.
  </p>
  <p
    className="prepipHtml"
  >
    We encourage you to reach out to your TTL who is available to give you feedback and guidance. You can also seek help from your colleagues or cohort rep or any member of the fellow’s council or leadership team as needed as you strive to improve on these issue areas.
  </p>
  <p
    className="prepipHtml"
  >
    TIA, 
  </p>
  <p>
    <b>
      Olaolu Akinsete, Manager
    </b>
  </p>
</div>
`;
